kubernetes/apps/home-automation/orcaslicer/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.vzkn.eu/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: orcaslicer
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: orcaslicer
      app.kubernetes.io/instance: orcaslicer
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-external
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
